# eserciziSO

./: .gitignore  CMakeLists.txt
LAB 2/: prova.txt  text.txt
LAB 2/2.1/: FILE1.txt  a.out  buco.c
LAB 2/2.2/: a.out  file.txt  file2.txt  main.c
LAB 2/2.3/: main.c
LAB 2/2.4/: a.out  file2.txt  main.c
LAB 2/open_prova/: open.c
LAB 2/prova/: a.out  prova.c
LAB 2/soluzioni/: 02_1.c  02_2.c  02_4.c  02_4b.c
LAB 3/myAccess/: a.out  myAccess.c
LAB 3/myLs/: a.out  myLs.c
LAB 3/soluzioni/: 03_1.c  03_2.c  03_3.c
LAB 3/symbolicLink/: a.out  symbolicLink.c
LAB 3/typeFile/: typeFile.c
LAB 3/userID/: a.out  userID.c
LAB 4/: prova.c
LAB 4/4.1/: a.out  incolla.txt  main.c
LAB 4/4.2/: 4.2.c  main.c
LAB 4/4.3/: 4.3.c  ELENCO.txt  a.out  main.c
LAB 4/4.4/: main.c
LAB 4/4.5/: a.out
LAB 4/4.6/: ELENCO.txt  a.out  main2.c
LAB 4/4.7/: main.c
LAB 4/ftell/: FILE1.txt  a.out  ftell.c
LAB 4/soluzioni/: 04_2.c  04_3.c  04_4.c  NOMI.txt  a.out
LAB 4/soluzioni_tutor/: 04_5.c  04_5v1.c  04_7.c  04_7_stdout.c  ELENCO.txt
LAB 4/unoAllaVolta/: a.out
LAB 5-6/6.1/: copia.txt  main.c
LAB 5-6/exec_prove/: esterno.c  lsCommand.c  main.c  makefile
LAB 5-6/prove/: prova3.c  raceCondition2.c  wait.c
LAB 5/6.1/: 6.1.c  a.out
LAB 5/prove/: a.out  prova.c  prova2.c  raceCondition.c  zombie.c
LAB 5/soluzioni/: 05_1a.c  05_1b.c
LAB 7/: prova.c
LAB 7/7.1/: main.c  main2.c  makefile
LAB 7/7.2/: main.c
LAB 7/7.3/: file1  main.c
LAB 7/7.4/: main.c
LAB 8/8.1/: main.c
LAB 8/8.2/: main.c
LAB 8/8.3/: ELENCO.txt  (+3 more)
LAB 9/: cattaneo.c
exam/: main.c
(+44 files in other folders)
