cmake_minimum_required(VERSION 3.23)
project(esercizi C)

set(CMAKE_C_STANDARD 11)

add_executable(esercizi
        "LAB 2/2.1/buco.c"
        "LAB 2/2.2/main.c"
        "LAB 2/2.3/main.c"
        "LAB 2/2.4/main.c"
        "LAB 2/prova/prova.c"
        "LAB 2/soluzioni/02_1.c"
        "LAB 2/soluzioni/02_2.c"
        "LAB 2/soluzioni/02_4.c"
        "LAB 2/soluzioni/02_4b.c"
        "LAB 3/myAccess/myAccess.c"
        "LAB 3/myLs/myLs.c"
        "LAB 3/provaIntercorso/es1/provaIntercorso.c"
        "LAB 3/provaIntercorso/es2/es2.c"
        "LAB 3/soluzioni/03_1.c"
        "LAB 3/soluzioni/03_2.c"
        "LAB 3/soluzioni/03_3.c"
        "LAB 3/symbolicLink/symbolicLink.c"
        "LAB 3/typeFile/typeFile.c"
        "LAB 3/userID/userID.c"
        "LAB 4/4.1/main.c"
        "LAB 4/4.2/4.2.c"
        "LAB 4/4.3/4.3.c"
        "LAB 4/ftell/ftell.c"
        "LAB 4/unoAllaVolta/unoAllaVolta.c"
        "LAB 5/6.1/6.1.c"
        "LAB 5/prove/prova.c"
        "LAB 5/prove/prova2.c"
        "LAB 5/prove/prova3.c")
